﻿svs 13.12.2013 12:06:12 +0400 - build 3741

1. Mantis#0002545: GUID для меню параметров плагинов

    PluginsConfigMenuId   =  {B4C242E7-AA8E-4449-B0C3-BD8D9FA11AED} --> Menu.Id

drkns 13.12.2013 09:23:31 +0200 - build 3740

1. Уточнение 3738.

drkns 13.12.2013 01:21:33 +0200 - build 3739

1. VC10 fix.

drkns 13.12.2013 00:57:54 +0200 - build 3738

1. Рефакторинг.

drkns 09.12.2013 20:56:45 +0200 - build 3737

1. В 3733 погнулась раскраска файлов.

w17 09.12.2013 14:03:54 +0400 - build 3736

1. Уточнение 3678 (M#2496)

w17 09.12.2013 13:43:23 +0400 - build 3735

1. M#2543: неверная работа Panel.SetPosIdx при включенном фильтре в панели

svs 09.12.2013 10:55:43 +0400 - build 3734

1. SQLite 3.8.2

drkns 08.12.2013 23:04:44 +0200 - build 3733

1. Рефакторинг.

svs 06.12.2013 14:31:24 +0400 - build 3732

1. Mantis#0002331: Хоткеи и\или GUID для Folder Shortcuts 

    FolderShortcutsDlgId  = {DC8D98AC-475C-4f37-AB1D-45765EF06269} --> Dlg.Id
      Диалог редактирования пути.
    FolderShortcutsMoreId = {601DD149-92FA-4601-B489-74C981BC8E38} --> Menu.Id
      Меню, показываемое, когда на один шорткат навешено больше одного пути.
      Ранее введенный FolderShortcutsId - это меню общего списка шорткатов (F9 c d).

2. В "построитель" DialogBuilder добавлены функции SetId/GetId присвоения GUID`а диалогу.

svs 05.12.2013 17:07:29 +0400 - build 3731

1. Mantis#0002537: лист с флагом DIF_LISTNOBOX в диалоге странно прокручивается мышью
   ...аналогичное поведение было и у PgDn

svs 05.12.2013 14:43:33 +0400 - build 3730

1. SysLog. Выходной файл в UTF-8; корректировка открытия/закрытия файла (с отладочной инфой по завершению работы программы)

drkns 04.12.2013 20:32:29 +0200 - build 3729

1. Рефакторинг.

2. В syslog'е использовались не те *printf-функции.

zg 29.11.2013 21:29:21 +0200 - build 3728

1. fg4bit и bg4bit при импорте экспорте были перепутаны местами.

drkns 27.11.2013 22:00:17 +0200 - build 3727

1. 0002533: не работает считывание настроек Xlat при старте Far
