@@ -1,4 +1,8 @@
-﻿svs 13.12.2013 12:06:12 +0400 - build 3741
+﻿drkns 13.12.2013 22:15:29 +0200 - build 3742
+
+1. Уточнение 3738.
+
+svs 13.12.2013 12:06:12 +0400 - build 3741
 
 1. Mantis#0002545: GUID для меню параметров плагинов
 
